--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="app_name">Location Monitor</string>
-    <string name="locator_is_on_toggle_text">Location monitor \n is turned on \n</string>
-    <string name="locator_is_off_toggle_text">Location monitor \n is turned off \n</string>
-    <string name="locator_notification_ticker_text">Location monitor is turning on ... </string>
-    <string name="locator_notification_content_title">Location monitor</string>
-    <string name="locator_notification_content_text">Location monitor is turned on</string>
+    <string name="app_name">Locator</string>
+    <string name="locator_is_on_toggle_text">\nLocator \n is turned on \n</string>
+    <string name="locator_is_off_toggle_text">\nLocator \n is turned off \n</string>
+    <string name="locator_notification_ticker_text">Locator is turning on ... </string>
+    <string name="locator_notification_content_title">Locator</string>
+    <string name="locator_notification_content_text">Locator is turned on</string>
 </resources>
