--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -5,6 +5,7 @@
     <string name="locator_is_off_toggle_text">Locator is turned off</string>
     <string name="locator_notification_ticker_text">Locator is turning on …</string>
     <string name="locator_notification_content_title">Locator</string>
-    <string name="locator_notification_content_text">Locator is turned on</string>
+    <string name="locator_is_on_notification_content_text">Locator is turned on</string>
+    <string name="locator_is_off_notification_content_text">Locator is turned off</string>
     <string name="locator_open_viewer_button_text">View locations</string>
 </resources>
